# yangotech_mcp

./: .env.example  .gitignore  LICENSE  MANUAL_SETUP.md  PYTHON_SETUP.md  QUICK_START.md  README.md  cleanup.py  client.py  install.py  models.py  pyproject.toml  server.py
tests/: __init__.py  test_client.py  test_models.py
