[project]
name = "mcp-server-yango-tech"
version = "0.1.0"
description = "MCP server for Yango Tech B2B API integration"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Viktor Shved", email = "zambas124@gmail.com"}
]
telegram = "shvedvik"
license = {text = "MIT"}
keywords = ["mcp", "yango-tech", "api", "orders", "products", "delivery"]
dependencies = [
    "fastmcp>=2.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["tests/", "docs/", ".env*", "main.py"]

[project.scripts]
mcp-server-yango-tech = "server:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
